--- a/public/index.html
+++ b/public/index.html
@@ -22,12 +22,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <title>Encryption</title>
 </head>
 
-<body class="h-100" style="text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+<body style="text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
  box-shadow: inset 1rem 1rem 16rem 3rem rgba(0, 0, 0, 0.5);">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
